package com.neopragma.cobolcheck.features.launcher.Formatter.Formats;

/* Formats that test results can be given in
 * Every enum value is a valid file extension, as it is used to
 * set the extension for the test result file.
 */
public enum TestOutputFormat {
    txt,
    xml
}
